Fix textInputs spacing by changing the margin right to 30 px

--- a/src/pages/Applicant/SignUp/PersonalInformationForm/styles.module.scss
+++ b/src/pages/Applicant/SignUp/PersonalInformationForm/styles.module.scss
@@ -27,7 +27,7 @@
 
 .name,
 .email {
-  margin: 0 $spacing-m 0 0;
+  margin: 0 $spacing-xxl 0 0;
 }
 
 .surname,
